# Storm-POS

./: .replit  SEO_REPORT.md  build-ssr.mjs  design_guidelines.md  package-lock.json  package.json  pos-system-backup.tsx  replit.md  start.sh  temp_checkout_fix.tsx
.github/workflows/: release.yml
attached_assets/: Pasted-Build-a-high-converting-modern-SaaS-website-for-a-software-company-named-Storm-Project-Require-1751018904882_1751018904882.txt  Pasted-Core-Objective-Design-and-code-a-multi-step-user-segmen_1774947839086.txt  Pasted-Create-a-cloud-based-POS-Point-of-Sale-web-application-for-a-South-African-company-called-Storm--1751387724225_1751387724225.txt  Pasted-Update-the-pricing-payment-plans-section-There-are-3-pl_1777308095621.txt  Pasted-Update-the-pricing-payment-plans-section-There-are-3-pl_1777308320354.txt  storm_pos_full_product_audit_1777289960254.html
client/: index.html
client/public/: robots.txt
client/src/: App.tsx  entry-server.tsx  index.css  main.tsx
client/src/components/: BillingGate.tsx  InvoiceProductPicker.tsx  ReceiptCustomizerDialog.tsx  TutorialGuide.tsx  UpsellBanner.tsx  contact-form.tsx  footer.tsx  hero-svg.tsx  navigation.tsx  web-dev-svg.tsx
client/src/data/: tutorialSteps.ts
client/src/hooks/: use-toast.ts
client/src/lib/: queryClient.ts  seo.ts
server/: email.ts  index.ts  routes.ts  storage.ts  vite.ts
shared/: schema.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
(+28 files in other folders)
