[package]
name = "storm-pos"
version = "1.5.34"
description = "Storm POS - Desktop Application"
authors = ["Storm"]
edition = "2021"

[lib]
name = "storm_pos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[target.'cfg(not(target_os = "android"))'.dependencies]
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"

[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-opener = "2"
tauri-plugin-sharekit = "0.3"
tauri-plugin-http = "2"
tauri-plugin-android-fs = { version = "28", features = ["legacy_storage_permission"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
